--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 jwtSecret = 'juanes1001'
+PORT=5000
+uri='mongodb+srv://juan:hSt940tEC5dQyjEM@reto-tareas.v2lfs.mongodb.net/tareas?retryWrites=true&w=majority'
+user:'juanesca2207@gmail.com'
+pass:'V0c4101d'
