--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.18",
+    "nodemailer-smtp-transport": "^2.7.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
